environment/rbac-role-external-dns-large.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: external-dns-large
  namespace: kube-system
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: external-dns-large
    spec:
      serviceAccountName: external-dns-large
      containers:
      - name: external-dns-large
        image: registry.opensource.zalan.do/teapot/external-dns:latest
        args:
        - --source=service
        - --source=ingress
        - --domain-filter=staging-large-ai.moneylion.io # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
        - --provider=aws
        - --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
        - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
        - --registry=txt
        - --txt-owner-id=StagingEKS-LargeIP-AI
