environment/kube-cost-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "kube-cost-analyzer-ingress"
  namespace: "kubecost" # prod namespace not finalised
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/security-groups: "sg-0f1ff11c224b8b340"
    alb.ingress.kubernetes.io/listen-ports:  '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:964458643333:certificate/0a4c3de4-210b-435d-af39-56d343f68e03"
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'

    # allow 404s on the health check
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/success-codes: "200"
  labels:
    app: "kubecost-cost-analyzer"
spec:
  rules:
    - host: staging-kube-cost.moneylion.io
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: "kubecost-cost-analyzer"
              servicePort: 9090
